safari gif alignment fixed

--- a/app/assets/stylesheets/app/style.scss
+++ b/app/assets/stylesheets/app/style.scss
@@ -608,7 +608,7 @@ ul.pagination.pagination-sm > li.page-item.active > a.page-link{
             }
             .demo-image{
                 position: absolute;
-                // left: 40px;
+                left: 0px;
                 top: 20px;
             }
         }
